<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fel SmartApp</string>

    <string name="apiaddress">http://api.fel.asso.fr</string>

    <!-- DRAWER -->
    <string name="title_section1">Evènement</string>
    <string name="title_section2">Trouver son logement</string>
    <string name="title_section3">Mes participations</string>
    <string name="title_section4">Associatif connecte toi</string>

    <!-- DETAIL -->
    <string name="startDate">Date de début: </string>
    <string name="endDate">Date de fin: </string>
    <string name="price">Prix: </string>
    <string name="location">Lieu: </string>
    <string name="name">Nom: </string>
    <string name="free">gratuit</string>
    <string name="noEvents">Il n\'y a pas d\'évènements</string>
    <string name="connectionError">Impossible de se connecter</string>
    <string name="noParticipation">Vous ne participez à aucun évènement.</string>
    <string name="connection">Connexion en cours...</string>
    <string name="removeEvent">Ne plus participer</string>
    <string name="addEvent">Je participe</string>
    <string name="addToScheduler">J\'ajoute à mon agenda</string>

    <!-- EVENT ITEM TEMPLATE -->
    <string name="event_name">Nom de l\'évènement</string>
    <string name="event_date">Date de l\'évènement</string>
    <string name="event_desc">Description de l\'évènement</string>
    <string name="action_settings">Options</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- FIND A HOUSING -->
    <string name="Housing_Description">Ici vous pouvez trouver les résidences proposées en ce moment par studélite.</string>
    <!-- RESIDENCE 1 -->
    <string name="Studélite_Housing1">Résidence étudiante Saint-Louis</string>
    <string name="Studélite_Housing1_link">http://www.studelites.com/fr/lyon/residence-etudiante-saint-louis-lyon-7.html</string>
    <!-- RESIDENCE 2 -->
    <string name="Studélite_Housing2">Résidence étudiante Bron Lumière</string>
    <string name="Studélite_Housing2_link">http://www.studelites.com/fr/lyon/residence-etudiante-saint-louis-lyon-7.html</string>
    <!-- RESIDENCE 3 -->
    <string name="Studélite_Housing3">Résidence étudiante Dali II</string>
    <string name="Studélite_Housing3_link">http://www.studelites.com/fr/lyon/residence-etudiante-dali-ii-lyon-3.html</string>
    <!-- RESIDENCE 4 -->
    <string name="Studélite_Housing4">Résidence étudiante Dufy4</string>
    <string name="Studélite_Housing4_link">http://www.studelites.com/fr/lyon/residence-etudiante-dufy-villeurbanne.html</string>

    <string name="title_activity_housing">HousingActivity</string>

    <string name="Loader_Wait">Veuillez patienter...</string>

    <!-- FORMAT DATE/HEURE -->
    <string name="date_format">dd/MM/yyyy hh:mm</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_even_creator">Créer un événement</string>
    <string name="creation_event_loader">Création de l\'événement...</string>
    <string name="send_event_loader">Envoi de l\'événement...</string>
    <string name="send_event_success_loader">Evènement envoyé avec succès...</string>
    <string name="send_event_failed_loader">Echec de l\'envoi...</string>
    <string name="login_loader">Connexion en cours...</string>
    <string name="login_failed_loader">Connexion échouée...</string>
    <string name="login_failed_name">Compte inexistant...</string>
    <string name="login_success">Connexion réussie...</string>


    <string name="create_event_text_button">Créer</string>

    <!--Dialog popup edit info et edit desc-->
    <string name="ok_Button">Ok</string>
    <string name="cancel_Button">Annuler</string>
    <string name="date_debut_edit_info">Date/Heure de début</string>
    <string name="date_fin_edit_info">Date/Heure de fin</string>
    <string name="desc_edit_info">Description de l\'événement</string>
    <string name="adresse_event_edit_info">Adresse</string>
    <string name="money_event_edit_info">€</string>
    <string name="prix_event_edit_info">Prix :</string>
    <string name="zipcode_hint">Code postal</string>
    <string name="nameEvent_hint">Nom de l\'évènement</string>
    <string name="error_image_load">Impossible de charger le fichier, peut-être inexistant.</string>
    <string name="error_date_too_short">Veuillez vérifier votre date de fin.</string>
    <string name="missing_data_event">Vous devez entrer au minimum : \nUn nom d\'événement \nUne date et heure de début \nUn lieu</string>

    <string name="title_edit_info">Editer les informations</string>
    <string name="title_login">Assiociatif connecte toi !</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="hint_login_id">Identifiant</string>
    <string name="hint_login_pwd">Mot de passe</string>

    <string name="bad_login">Identifiant ou mot de passe incorrect</string>

    <string name="toast_long_click_photo">Un long clique sur l\'image rétablis celle par défaut.</string>


    <string name="lacartedescolocs">La carte des colocs</string>
    <string name="lacartedescolocs_url">http://www.lacartedescolocs.fr/</string>

    <!--Text à propos-->
    <string name="about_button">À Propos</string>
    <string name="title_activity_apropos">À Propos</string>
    <string name="founder_project">Fondateurs :</string>
    <string name="ecole_name">École Supinfo Lyon</string>
    <string name="fel_name">FEL (Fédération des Étudiants Lyonnais)</string>
    <string name="bde_name">BDE Esi Lyon</string>
    <string name="labo_name">Labo Web dev</string>
    <string name="devs_title">Développeurs :</string>
    <string name="dev_one">Benoit Guillot</string>
    <string name="dev_two">Iemsal Assous</string>
    <string name="dev_three">Loic Billaud</string>
    <string name="contrib">Et tout les contributeurs du projet</string>
    <string name="github_link">https://github.com/SUPINFOEsiFel</string>
    <string name="linkedin_dev_one">https://fr.linkedin.com/pub/benoit-guillot/b8/19b/35a</string>
    <string name="linkedin_dev_two">https://fr.linkedin.com/pub/iemsal-assous/71/775/14b</string>
    <string name="linkedin_dev_three">https://fr.linkedin.com/pub/loïc-billaud/65/479/a25</string>
    <string name="link_supinfo">http://www.supinfo.com</string>
    <string name="link_esilyon">https://www.facebook.com/EsiLyon</string>
    <string name="link_fel">http://http://www.fel.asso.fr/</string>
    <string name="copyright">Copyright ©2015, Supinfo &amp; FEL and the Fel SmartApp\'s contributors</string>
    <!---->

    <!--Text EasterEggs-->
    <string name="stopit_now">Bon, tu vas te décider ?</string>
    <string name="stopit_now2">Allé ça suffit j\'arrête tout !</string>

</resources>
