<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.esilyon.fel.HousingFragment" android:background="@color/blueFEL">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:text="@string/Housing_Description"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/redFEL">
            <Button
                android:id="@+id/HousingBtn1"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/Studélite_Housing1"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/redFEL">
            <Button
                android:id="@+id/HousingBtn2"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/Studélite_Housing2"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/redFEL">
            <Button
                android:id="@+id/HousingBtn3"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/Studélite_Housing3"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/redFEL">
            <Button
                android:id="@+id/HousingBtn4"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/Studélite_Housing4"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>
