<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.esilyon.fel.AProposActivity"
    android:background="@color/blueFEL">


    <LinearLayout
        android:id="@+id/developper_encart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devs_title"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/dev_one_button"
                    android:layout_width="@dimen/cote_button"
                    android:layout_height="@dimen/cote_button"
                    android:background="@drawable/dev_one"
                    android:src="@drawable/dev_circle_image"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_one"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/dev_two_button"
                    android:layout_width="@dimen/cote_button"
                    android:layout_height="@dimen/cote_button"
                    android:src="@drawable/dev_circle_image"
                    android:background="@drawable/dev_two"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_two"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/dev_three_button"
                    android:layout_width="@dimen/cote_button"
                    android:layout_height="@dimen/cote_button"
                    android:background="@drawable/dev_three"
                    android:src="@drawable/dev_circle_image"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_three"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

    <View
        android:id="@+id/sep"
        android:layout_below="@id/developper_encart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_margin="10dp"/>

    <!--<ScrollView-->
        <!--android:layout_below="@id/sep"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:scrollbarAlwaysDrawVerticalTrack="true">-->

    <LinearLayout
        android:id="@+id/project_founder_encart"
        android:layout_below="@id/sep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/founder_project"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:id="@+id/layout_founder_supinfo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logo_supinfo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ico_circle_logo"
                android:background="@drawable/supinfo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/ecole_name"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_founder_esilyon"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logo_esilyon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ico_circle_logo"
                android:background="@drawable/esilyon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/bde_name"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_founder_fel"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logo_fel"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ico_circle_logo"
                android:background="@drawable/logo_fel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/fel_name"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/sep2"
        android:layout_below="@id/project_founder_encart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_below="@id/sep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrib"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:text="@string/github_link"
            android:autoLink="web"
            android:textColorLink="@android:color/white"
            android:linksClickable="true"/>
        </LinearLayout>

        <!--</ScrollView>-->

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textStyle="italic"/>

</RelativeLayout>
