<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueFEL"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">

    <LinearLayout
        android:id="@+id/layout_edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/edittext_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textShortMessage"
            android:gravity="top"
            android:theme="@style/Theme.App.Base"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textColorHint"
            android:background="@color/background_edittext"
            android:padding="7dp"
            android:hint="@string/hint_login_id"/>

        <EditText
            android:id="@+id/edittext_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:inputType="text|textPassword"
            android:gravity="top"
            android:theme="@style/Theme.App.Base"
            android:textColor="@android:color/white"
            android:textColorHint="@color/textColorHint"
            android:background="@color/background_edittext"
            android:padding="7dp"
            android:hint="@string/hint_login_pwd"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout_edit_desc"
        android:background="@android:color/darker_gray">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/cancel_button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/redFEL"
                android:text="@string/cancel_Button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:textAllCaps="false"/>
        </FrameLayout>


        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/blueFEL"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/ok_button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/redFEL"
                android:text="@string/ok_Button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:textAllCaps="false"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loader_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminate="true"
            />
        <TextView
            android:id="@+id/loaderTextLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:textStyle="italic"
            android:gravity="center_vertical"
            android:text="@string/creation_event_loader"/>
    </LinearLayout>

</RelativeLayout>
