<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueFEL">

    <LinearLayout
        android:id="@+id/layout_edit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="5dp">

        <EditText
            android:id="@+id/text_Desc_Popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="7"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:theme="@style/Theme.App.Base"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/desc_edit_info"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout_edit_desc"
        android:background="@android:color/darker_gray">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/cancel_button_desc_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/redFEL"
                android:text="@string/cancel_Button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:textAllCaps="false"/>
            </FrameLayout>


        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/blueFEL"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/ok_button_desc_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/redFEL"
                android:text="@string/ok_Button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:textAllCaps="false"/>
            </FrameLayout>

    </LinearLayout>

</RelativeLayout>
